# caldir-provider-tuta

./: AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
patches/: 0001-expose-session-credentials.patch  0002-preserve-custom-id-on-post.patch  0003-implement-entity-erase.patch  0004-keep-sdk-diagnostics-off-stdout.patch  0005-fix-sdk-compiler-warnings.patch
scripts/: vendor.sh
src/: alarms.rs  commands.rs  constants.rs  content.rs  main.rs  mapping.rs  remote_config.rs  sdk_glue.rs  session.rs  writer.rs
src/commands/: connect.rs  create_event.rs  delete_event.rs  list_calendars.rs  list_events.rs  update_event.rs
src/session/: store.rs  types.rs
tests/: provider_crud.rs
